fixing the an chors on mobile waitlist

--- a/blocbox/static/blocbox/css/jb_bootstrap_customization.css
+++ b/blocbox/static/blocbox/css/jb_bootstrap_customization.css
@@ -140,6 +140,7 @@ h6 {font-size: 1.286em; font-weight: 400; }
 /*Make the navbar fixed if its mobile */
 @media (max-width: 767px) {
 	.waitlistbody .navbar-default {position: fixed; top:0; right: 0; left: 0;z-index: 10000 }
+	.waitlistbody .anchor{padding-top: 35px; /*and add padding to the anchor because there's a navbar now */
 }
 		
 /*Have a floating logo and so forth for min-width 768 - make the navbar not float */
